# Self-Flow-diffusers

./: .gitignore  README.md  README_DIFFUSERS.md  __init__.py  pyproject.toml  sample.py
scripts/: convert_selfflow_to_diffusers.py  sample_selfflow.py
src/diffusers/: __init__.py  _register_extensions.py
src/diffusers/models/: __init__.py
src/diffusers/models/transformers/: __init__.py  transformer_selfflow.py
src/diffusers/pipelines/: __init__.py
src/diffusers/pipelines/selfflow/: __init__.py  pipeline_selfflow.py
src/diffusers/schedulers/: __init__.py  scheduling_flow_match_selfflow.py
src/diffusers/utils/: __init__.py  token_utils.py
templates/: pipeline.py
tests/: conftest.py  test_selfflow_diffusers.py
