[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffusers-selfflow"
version = "0.1.0"
description = "Diffusers-style Self-Flow components for ImageNet flow-matching inference."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "diffusers>=0.30.1",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "einops>=0.6.0",
    "timm>=0.9.0",
    "safetensors",
    "Pillow>=9.0.0",
    "tqdm>=4.65.0",
    "transformers>=4.30.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
